@@ -13,6 +13,9 @@
 #ifndef NODEAPPLICATION_CALLBACK_IMPL_H
 #define NODEAPPLICATION_CALLBACK_IMPL_H
 #include /**/ "ace/pre.h"
+#include "ace/config-all.h"
+
+#if defined (ACE_HAS_THREADS)
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
@@ -83,3 +86,5 @@ namespace CIAO
 
 #include /**/ "ace/post.h"
 #endif /* NODEAPPLICATION_CALLBACK_IMPL_H */
+
+#endif /* ACE_HAS_THREADS */
